# automatic_move

./: .gitmodules  ABU_map.py  README.md  colcon_build.sh  fork_submodules.sh  requirements.txt
install/: local_setup.sh  setup.sh
install/automove_engine/lib/automove_engine/: quick_test
install/automove_engine/share/automove_engine/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fast_lio/lib/fast_lio/: fastlio_mapping
install/fast_lio/share/fast_lio/: package.sh
install/fast_lio/share/fast_lio/config/: mid360.yaml
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/livox_sdk2/share/livox_sdk2/: package.sh
install/ros2_livox_simulation/share/ros2_livox_simulation/: package.sh
install/world_models/lib/world_models/: test_robot_movement.py
install/world_models/share/world_models/: competition_field.world  competition_field_copy.world  gazebo_launch.py  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/automove_engine/: package.xml  setup.py
src/automove_engine/automove_engine/: quick_test.py  state_manager.py
src/matplotlib_world/: automatic.py
src/world_construct/: ABU_map.py
src/world_models/: CMakeLists.txt  README.md  package.xml
src/world_models/launch/: gazebo_launch.py
src/world_models/models/simple_robot/: robot.urdf  robot.urdf.xacro
src/world_models/worlds/: competition_field.world
(+16 files in other folders)
